# stm32-baremetal-rs

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
clib/include/: library.h
clib/src/: library.c
src/: lib.rs  main.rs
src/ffi/: raw.rs  wrapper.rs
svd/: stm32f303.svd
