[package]
name = "stm32_baremetal"
version = "0.1.0"
edition = "2024"

[dependencies.stm32f3xx-hal]
version = "^0"
features = ["rt","stm32f303xc"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
log = "0.4.29"
panic-halt = "1.0.0"
lsm303agr = "0.3.0"
micromath = "2.1.0"
